<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/darker_gray"
    tools:context=".app.activities.DisassemblyActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/detailedMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/OperarioView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="70dp"
                android:background="@android:color/background_dark"
                android:backgroundTint="@android:color/background_dark"
                android:fontFamily="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/taskViewer"
                app:layout_constraintDimensionRatio="h,1:0.2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskViewer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:background="@android:color/background_dark"
                android:backgroundTint="@android:color/background_dark"
                android:fontFamily="monospace"
                android:text="@string/testText"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                app:layout_constraintDimensionRatio="h,1:0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OperarioView" />

            <Chronometer
                android:id="@+id/taskChronometer"
                android:layout_width="90dp"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/taskViewer"
                app:layout_constraintEnd_toEndOf="@+id/taskViewer"
                tools:ignore="MissingConstraints" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
                app:layout_constraintDimensionRatio="h,1:0.16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskViewer">

                <Button
                    android:id="@+id/listoButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/testButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/atrasButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Listo" />

                <Button
                    android:id="@+id/atrasButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="?android:attr/colorPressedHighlight"
                    android:text="@string/atrás"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/listoButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Regresar" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintDimensionRatio="h,1:0.16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <Button
                    android:id="@+id/anomaliaButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/anomalia"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/paradaButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/paradaButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:text="@string/parada"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/anomaliaButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Detener" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/cast_mini_controller_icon_width"
                android:layout_height="@dimen/cast_mini_controller_icon_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:0.2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/peugeot_logo" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/simpleMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/simpleListoButton"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="100dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/testButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Listo" />
        </android.support.constraint.ConstraintLayout>

    </ViewSwitcher>
</android.support.constraint.ConstraintLayout>
